--- a/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
+++ b/EstateManagement.BusinessLogic/EstateManagement.BusinessLogic.csproj
@@ -5,19 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CallbackHandler.DataTransferObjects" Version="2023.11.1" />
-    <PackageReference Include="MessagingService.Client" Version="2023.11.1" />
-    <PackageReference Include="SecurityService.Client" Version="2023.12.1" />
-    <PackageReference Include="Shared.DomainDrivenDesign" Version="2023.12.2" />
+    <PackageReference Include="CallbackHandler.DataTransferObjects" Version="2024.2.1" />
+    <PackageReference Include="MessagingService.Client" Version="2023.11.2-build53" />
+    <PackageReference Include="SecurityService.Client" Version="2023.12.2-build58" />
+    <PackageReference Include="Shared.DomainDrivenDesign" Version="2024.3.3" />
     <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Syncfusion.HtmlToPdfConverter.QtWebKit.Net.Core" Version="20.1.0.58" />
     <PackageReference Include="System.IO.Abstractions" Version="19.2.29" />
-    <PackageReference Include="TransactionProcessor.Client" Version="2024.2.2-build87" />
-    <PackageReference Include="TransactionProcessor.Float.DomainEvents" Version="2024.2.2-build87" />
-    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2024.2.2-build87" />
-    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2024.2.2-build87" />
+    <PackageReference Include="TransactionProcessor.Client" Version="2024.3.3-build94" />
+    <PackageReference Include="TransactionProcessor.Float.DomainEvents" Version="2024.3.3-build94" />
+    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2024.3.3-build94" />
+    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2024.3.3-build94" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.7" />
-    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2024.2.2-build87" />
+    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2024.3.3-build94" />
   </ItemGroup>
 
   <ItemGroup>
