--- a/EstateManagement.Repository/EstateManagement.Repository.csproj
+++ b/EstateManagement.Repository/EstateManagement.Repository.csproj
@@ -9,14 +9,14 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.7" />
-    <PackageReference Include="Shared" Version="2023.12.2" />
-    <PackageReference Include="TransactionProcessor.Float.DomainEvents" Version="2024.2.2-build87" />
-    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2024.2.2-build87" />
-    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2024.2.2-build87" />
-    <PackageReference Include="TransactionProcessor.Reconciliation.DomainEvents" Version="2024.2.2-build87" />
-    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2024.2.2-build87" />
-    <PackageReference Include="FileProcessor.File.DomainEvents" Version="2023.12.1" />
-    <PackageReference Include="FileProcessor.FileImportLog.DomainEvents" Version="2023.12.1" />
+    <PackageReference Include="Shared" Version="2024.3.3" />
+    <PackageReference Include="TransactionProcessor.Float.DomainEvents" Version="2024.3.3-build94" />
+    <PackageReference Include="TransactionProcessor.Settlement.DomainEvents" Version="2024.3.3-build94" />
+    <PackageReference Include="TransactionProcessor.Transaction.DomainEvents" Version="2024.3.3-build94" />
+    <PackageReference Include="TransactionProcessor.Reconciliation.DomainEvents" Version="2024.3.3-build94" />
+    <PackageReference Include="TransactionProcessor.Voucher.DomainEvents" Version="2024.3.3-build94" />
+    <PackageReference Include="FileProcessor.File.DomainEvents" Version="2023.12.2-build51" />
+    <PackageReference Include="FileProcessor.FileImportLog.DomainEvents" Version="2023.12.2-build51" />
   </ItemGroup>
 
   <ItemGroup>
