--- a/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
+++ b/EstateManagement.IntegrationTests/EstateManagement.IntegrationTests.csproj
@@ -11,7 +11,7 @@
     <PackageReference Include="EventStoreProjections" Version="2023.12.3" />
     <PackageReference Include="MessagingService.IntegrationTesting.Helpers" Version="2023.11.2-build53" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.3" />
-    <PackageReference Include="ClientProxyBase" Version="2024.4.2" />
+    <PackageReference Include="ClientProxyBase" Version="2024.4.3" />
     <PackageReference Include="Ductus.FluentDocker" Version="2.10.59" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
@@ -19,18 +19,16 @@
     <PackageReference Include="NLog" Version="5.2.8" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.3.8" />
     <PackageReference Include="SecurityService.Client" Version="2024.3.1" />
-    <PackageReference Include="Shared" Version="2024.4.2" />
-    <PackageReference Include="Shared.IntegrationTesting" Version="2024.4.2" />
+    <PackageReference Include="Shared" Version="2024.4.3" />
+    <PackageReference Include="Shared.IntegrationTesting" Version="2024.4.3" />
     <PackageReference Include="Shouldly" Version="4.2.1" />
     <PackageReference Include="TransactionProcessor.Client" Version="2024.3.3" />
     <PackageReference Include="TransactionProcessor.IntegrationTesting.Helpers" Version="2024.3.3" />
-    <PackageReference Include="xunit" Version="2.7.0" />
     <PackageReference Include="Reqnroll.Tools.MsBuild.Generation" Version="1.0.1" />
-    <PackageReference Include="Reqnroll.xUnit" Version="1.0.1" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.7">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="NUnit" Version="4.1.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
+    <PackageReference Include="Reqnroll" Version="1.0.1" />
+    <PackageReference Include="Reqnroll.NUnit" Version="1.0.1" />
     <PackageReference Include="coverlet.collector" Version="6.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
